# studing_algorithmns

./: .travis.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.examples/chapter/examples/: some_examples.py
.examples/chapter/exercises/: some_exercises.py
.examples/chapter/tests/: conftest.py
1. Complexity Analysis/: big_o_arithmetic_progression.py
2. Data Structures/2. Arrays: based in lists/: README.md
3. Algorithmns/recursion/: space_complexity-2.c  space_complexity.c
3. Algorithmns/searching/linear_search/: linear_search.py
3. Algorithmns/sorting/timsort/: chatgpt_example.py
algorithmns/searching/binary_search/: test_binary_search.py
algorithmns/searching/linear_search/: linear_search.py
algorithmns/sorting/: README.md  time_comparsion.py
algorithmns/sorting/a.bubble_sort/: basant_agarwal_bubble_sort.py  holczerbalazs_bubblesort.py  samukasmk_bubblesort_decorated.py
algorithmns/sorting/bogo_sort/: holczerbalazs_bogo_sort.py  kelvins_bogo_sort.py
algorithmns/sorting/bubble_sort/: basant_agarwal_bubble_sort.py  basantagarwal_bubble_sort.py  corealthoff_bubble_sort.py  geeksforgeeks_bubble_sort.py  hallison_paz_bubble_sort.py  hallisonpaz_bubble_sort.py  holczerbalazs_bubble_sort.py  kelvins_bubble_sort.py  lcgabaldon_bubble_sort.py  samukasmk_bubble_sort.py  samukasmk_bubblesort.py
algorithmns/sorting/comb_sort/: kelvins_comb_sort.py
complexity_analysis/: bigO_arithmetic_progression.py
data_structures/arrays/: README.md
data_structures/heaps/: python_heapq.py
(+102 files in other folders)
