[metadata]
name = studing_algorithmns
version = 0.0.1
url = https://github.com/samukasmk/studing_algorithmns
author = Samuel Sampaio
author_email = samukasmk@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache 2.0
description = A repository of my examples of studying algorithms in the practice.
long_description = file: README.md
long_description_content_type = text/markdown
scripts =
    scripts/studing_algorithmns

[options]
python_requires = >=3.11
